// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> should render correctly with filterText and empty appElements 1`] = `
<p
  id="filter-empty-message"
>
  Нет элементов списка, которые соответствуют Вашему запросу
</p>
`;

exports[`<Table /> should render correctly with loaded fullData and pageCount = 2 1`] = `
<Fragment>
  <div
    className="table"
    key="table"
  >
    <Connect(TablePanel) />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={0}
      key="tableElement0"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={1}
      key="tableElement1"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={2}
      key="tableElement2"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={3}
      key="tableElement3"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={4}
      key="tableElement4"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={5}
      key="tableElement5"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={6}
      key="tableElement6"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={7}
      key="tableElement7"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={8}
      key="tableElement8"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={9}
      key="tableElement9"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={10}
      key="tableElement10"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={11}
      key="tableElement11"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={12}
      key="tableElement12"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={13}
      key="tableElement13"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={14}
      key="tableElement14"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={15}
      key="tableElement15"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={16}
      key="tableElement16"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={17}
      key="tableElement17"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={18}
      key="tableElement18"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={19}
      key="tableElement19"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={20}
      key="tableElement20"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={21}
      key="tableElement21"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={22}
      key="tableElement22"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={23}
      key="tableElement23"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={24}
      key="tableElement24"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={25}
      key="tableElement25"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={26}
      key="tableElement26"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={27}
      key="tableElement27"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={28}
      key="tableElement28"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={29}
      key="tableElement29"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={30}
      key="tableElement30"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={31}
      key="tableElement31"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={32}
      key="tableElement32"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={33}
      key="tableElement33"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={34}
      key="tableElement34"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={35}
      key="tableElement35"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={36}
      key="tableElement36"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={37}
      key="tableElement37"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={38}
      key="tableElement38"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={39}
      key="tableElement39"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={40}
      key="tableElement40"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={41}
      key="tableElement41"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={42}
      key="tableElement42"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={43}
      key="tableElement43"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={44}
      key="tableElement44"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={45}
      key="tableElement45"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={46}
      key="tableElement46"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={47}
      key="tableElement47"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={48}
      key="tableElement48"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={49}
      key="tableElement49"
    />
  </div>
  <div
    className="paginator-container"
    key="paginatorContainer"
  >
    <Connect(Paginator)
      key="paginator"
    />
  </div>
</Fragment>
`;

exports[`<Table /> should render correctly with loaded fullData and pageCount = 2 2`] = `
<Fragment>
  <div
    className="table"
    key="table"
  >
    <Connect(TablePanel) />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={0}
      key="tableElement0"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={1}
      key="tableElement1"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={2}
      key="tableElement2"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={3}
      key="tableElement3"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={4}
      key="tableElement4"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={5}
      key="tableElement5"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={6}
      key="tableElement6"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={7}
      key="tableElement7"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={8}
      key="tableElement8"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={9}
      key="tableElement9"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={10}
      key="tableElement10"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={11}
      key="tableElement11"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={12}
      key="tableElement12"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={13}
      key="tableElement13"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={14}
      key="tableElement14"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={15}
      key="tableElement15"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={16}
      key="tableElement16"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={17}
      key="tableElement17"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={18}
      key="tableElement18"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={19}
      key="tableElement19"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={20}
      key="tableElement20"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={21}
      key="tableElement21"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={22}
      key="tableElement22"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={23}
      key="tableElement23"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={24}
      key="tableElement24"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={25}
      key="tableElement25"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={26}
      key="tableElement26"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={27}
      key="tableElement27"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={28}
      key="tableElement28"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={29}
      key="tableElement29"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={30}
      key="tableElement30"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={31}
      key="tableElement31"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={32}
      key="tableElement32"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={33}
      key="tableElement33"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={34}
      key="tableElement34"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={35}
      key="tableElement35"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={36}
      key="tableElement36"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={37}
      key="tableElement37"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={38}
      key="tableElement38"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={39}
      key="tableElement39"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={40}
      key="tableElement40"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={41}
      key="tableElement41"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={42}
      key="tableElement42"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={43}
      key="tableElement43"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={44}
      key="tableElement44"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={45}
      key="tableElement45"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={46}
      key="tableElement46"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={47}
      key="tableElement47"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={48}
      key="tableElement48"
    />
    <Connect(TableElement)
      element={
        Object {
          "email": "email",
          "firstName": "firstName",
          "id": 1,
          "lastName": "lastName",
          "phone": "phone",
        }
      }
      elementIndex={49}
      key="tableElement49"
    />
  </div>
  <div
    className="paginator-container"
    key="paginatorContainer"
  />
</Fragment>
`;

exports[`<Table /> should render correctly without loaded fullData 1`] = `null`;
